[gd_scene load_steps=8 format=3 uid="uid://b1kmhtrjyer4j"]

[ext_resource type="Script" uid="uid://cftnv6maflll6" path="res://src/characters/enemies/boss_tatar/boss_tatar.gd" id="1_boss"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_boss"]
albedo_color = Color(0.8, 0, 0.8352941, 1)
metallic = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_boss"]
radius = 0.6
height = 2.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_38ts5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_area"]
transparency = 1
albedo_color = Color(1, 0.1, 0.1, 0.6)
emission_enabled = true
emission = Color(1, 0.2, 0.2, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_area"]
height = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D"]
height = 3.0
radius = 7.0

[node name="BossTatar" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_boss")

[node name="BossTatarModel" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_boss")
mesh = SubResource("CapsuleMesh_boss")

[node name="BossTatarCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_38ts5")

[node name="PathFinding" type="NavigationAgent3D" parent="."]

[node name="DamageArea" type="Area3D" parent="."]
visible = false

[node name="DamageAreaMesh" type="MeshInstance3D" parent="DamageArea"]
material_override = SubResource("StandardMaterial3D_area")
mesh = SubResource("CylinderMesh_area")

[node name="DamageAreaCollision" type="CollisionShape3D" parent="DamageArea"]
shape = SubResource("CylinderShape3D")
debug_color = Color(0.9971226, 0, 0.18228063, 0.41960785)
